Fix text overflow for long titles in the plugin list

--- a/src/components/VencordSettings/addonCard.css
+++ b/src/components/VencordSettings/addonCard.css
@@ -62,3 +62,40 @@
 .vc-addon-author::before {
     content: "by ";
 }
+
+.vc-addon-title-container {
+    width: 100%;
+    overflow: hidden;
+    height: 1.25em;
+    position: relative;
+}
+
+.vc-addon-title {
+    position: absolute;
+    inset: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+@keyframes vc-addon-title {
+    0% {
+        transform: translateX(0);
+    }
+
+    40% {
+        transform: translateX(var(--offset));
+    }
+
+    50% {
+        transform: translateX(var(--offset));
+    }
+
+    90% {
+        transform: translateX(0);
+    }
+}
+
+.vc-addon-title:hover {
+    overflow: visible;
+    animation: vc-addon-title var(--duration) linear infinite;
+}
